--- a/Proyecto Java/index.html
+++ b/Proyecto Java/index.html
@@ -88,7 +88,7 @@
 
         </section>
     
-        <section class="bg-[#282634] text-black grid grid-cols-3 justify-evenly gap-1 h-[500px] bg-[url('./Imágenes/F2.1.jpe')] bg-cover">
+        <section class="bg-[#282634] text-black grid grid-cols-3 justify-evenly gap-1 h-[500px] bg-[url('./Imágenes/F2.1.jpeg')] bg-cover">
 
     <!--Bio-->
 
